Fix layout issue

--- a/src/components/ui/PlanDetailsTable/index.scss
+++ b/src/components/ui/PlanDetailsTable/index.scss
@@ -48,13 +48,12 @@
       }
       td {
         @media screen and (min-width: 320px) and (max-width: 480px) {
-          width: 40%;
-          word-break: break-word;
+          width: calc(70% / 3);
         }
       }
       td:first-child {
         @media screen and (min-width: 320px) and (max-width: 480px) {
-          width: 60%;
+          width: 30%;
         }
       }
     }
@@ -206,7 +205,9 @@
   .comp-td:not(:first-child) {
     padding-left: 15px;
     padding-right: 8px;
-    width: 63%;
+    @media screen and (min-width: 320px) and (max-width: 480px) {
+      width: calc(70% / 3);
+    }
   }
   .extra-padding {
     padding-left: 20px;
